# context-hub

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md
src/: main.rs
src/commands/: config_cmd.rs  context.rs  doctor.rs  hook.rs  init.rs  memory.rs  mod.rs  sync.rs
src/core/: context.rs  git.rs  llm.rs  mod.rs  storage.rs
src/ui/: mod.rs
src/ui/components/: theme.rs  widgets.rs
src/ui/screens/: context.rs  init.rs  mod.rs  sync.rs
src/utils/: config.rs  logger.rs
